# docs/swagger.json
@@ -15,7 +15,7 @@
     },
     "basePath": "/v1",
     "paths": {
-        "/authentication/token": {
+        "/authentication/login": {
             "post": {
                 "description": "Creates a token for a user",
                 "consumes": [
@@ -28,22 +28,11 @@
                     "authentication"
                 ],
                 "summary": "Creates a token",
-                "parameters": [
-                    {
-                        "description": "User credentials",
-                        "name": "payload",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/main.CreateUserTokenPayload"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
-                        "description": "Token",
+                        "description": "User logged in",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/store.User"
                         }
                     },
                     "400": {
@@ -61,7 +50,7 @@
                 }
             }
         },
-        "/authentication/user": {
+        "/authentication/register": {
             "post": {
                 "description": "Registers a user",
                 "consumes": [
@@ -104,6 +93,43 @@
             }
         },
         "/food": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Fetches all food in the database",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "foods"
+                ],
+                "summary": "Fetches all food",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/store.Food"
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            },
             "post": {
                 "security": [
                     {
@@ -270,7 +296,50 @@
                 }
             }
         },
-        "/meal/{id}": {
+        "/meals/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Get a meal entry by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "meal entrys"
+                ],
+                "summary": "Gets a meal entry",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Meal ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content",
+                        "schema": {
+                            "$ref": "#/definitions/store.MealEntry"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            },
             "delete": {
                 "security": [
                     {
@@ -290,7 +359,7 @@
                 "summary": "Deletes a meal entry",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Meal ID",
                         "name": "id",
                         "in": "path",
@@ -405,6 +474,46 @@
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
+        "/users/self": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Fetches the currently logged in user profile",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Fetches the currently logged in user profile",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/store.User"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
                     },
                     "404": {
                         "description": "Not Found",
@@ -563,8 +672,8 @@
             "required": [
                 "calories",
                 "carbs",
-                "description",
                 "fat",
+                "fiber",
                 "name",
                 "protein",
                 "serving_size",
@@ -581,11 +690,10 @@
                 "carbs": {
                     "type": "number"
                 },
-                "description": {
-                    "type": "string",
-                    "maxLength": 1000
-                },
                 "fat": {
+                    "type": "number"
+                },
+                "fiber": {
                     "type": "number"
                 },
                 "name": {
@@ -630,23 +738,6 @@
                 },
                 "serving_unit": {
                     "type": "string"
-                }
-            }
-        },
-        "main.CreateUserTokenPayload": {
-            "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string",
-                    "maxLength": 255
-                },
-                "password": {
-                    "type": "string",
-                    "minLength": 8
                 }
             }
         },
@@ -752,10 +843,10 @@
                 "created_at": {
                     "type": "string"
                 },
-                "description": {
-                    "type": "string"
-                },
                 "fat": {
+                    "type": "number"
+                },
+                "fiber": {
                     "type": "number"
                 },
                 "id": {
@@ -819,11 +910,17 @@
                 "created_at": {
                     "type": "string"
                 },
+                "food": {
+                    "$ref": "#/definitions/store.Food"
+                },
                 "food_id": {
                     "type": "string"
                 },
                 "id": {
                     "type": "string"
+                },
+                "meal": {
+                    "$ref": "#/definitions/store.Meal"
                 },
                 "meal_id": {
                     "type": "string"
